# DiscreteOptimization

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: evaluations.txt  main.cpp
src/helpers/: Files.h  Time.h
src/knapsack/: Evaluator.h  Reader.h  Types.h  grade.cpp  report.md
src/knapsack/solvers/: GRASP.h
src/setcover/: CoveringSetsPack.h  grade.cpp  report.md
src/setcover/solvers/: Constructive.h  Greedy.h  MILP.h
